--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@ $fade-text-color: #7a8ec0;
 }
 
 html {
+  scroll-behavior: smooth;
   font-family: $font;
 }
 
@@ -151,4 +152,66 @@ nav {
 .img-sm {
   width: 70px;
   height: 70px;
+}
+
+.img-med {
+  width: 90px;
+  height: 126px;
+}
+
+.carousel {
+  overflow: hidden;
+  padding-bottom: 0.7rem;
+  white-space: nowrap;
+}
+
+.carousel-viewport {
+  overflow-x: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.carousel-item {
+  position: relative;
+  width: 90px;
+  p {
+    color: $main-color;
+    font-size: 0.74rem;
+    text-align: left;
+    padding-left: 0.25rem;
+  }
+  a {
+    text-decoration: none;
+  }
+  .add-to-list {
+    background-color: rgba(255, 255, 255, 0.479);
+    color: black;
+    font-size: 0.8rem;
+    position: absolute;
+    padding: 0.26em;
+    top: 0.28em;
+    left: 0.28em;
+    border-radius: 3px;
+  }
+}
+
+.like {
+  position: absolute;
+  top: 0.25rem;
+  left: 0.25rem;
+  font-size: 1.25rem;
+  z-index: 2;
+  color: rgba(255, 255, 255, 0.678);
+}
+
+.user-count {
+  position: absolute;
+  top: 0.6rem;
+  right: 0.2rem;
+  color: white;
+  font-size: 0.65rem;
+  background-color: black;
 }
